--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.inner.adagg.MainActivity">
+    tools:context="com.inner.adagg.demo.MainActivity">
 
     <Button
         android:layout_width="wrap_content"
