--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,23 @@
     tools:context="com.inner.adagg.demo.MainActivity">
 
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/interstitial"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClick"
-        android:text="开始" />
+        android:text="插屏测试" />
+    <Button
+        android:id="@+id/banner_and_native"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="Banner和Native测试" />
+    <Button
+        android:id="@+id/complex"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="复合广告测试" />
 
     <RelativeLayout
         android:id="@+id/ad_container"
