--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,5 +96,17 @@
             android:layout_height="wrap_content"
             android:onClick="onClick"
             android:text="ADX_FB共用布局3" />
+        <Button
+            android:id="@+id/webmob_interstitial"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="WEMOB插屏测试" />
+        <Button
+            android:id="@+id/webmob_native"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="WEMOB原生测试" />
     </LinearLayout>
 </ScrollView>
