--- a/adsdk/src/main/res/layout/native_card_small.xml
+++ b/adsdk/src/main/res/layout/native_card_small.xml
@@ -6,34 +6,34 @@
     android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:id="@+id/fb_native_ad_unit"
+        android:id="@+id/native_native_ad_unit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
         android:orientation="vertical">
 
         <android.support.percent.PercentRelativeLayout
-            android:id="@+id/fb_cover_info"
+            android:id="@+id/native_cover_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#33000000">
 
             <ImageView
-                android:id="@+id/fb_image_cover"
+                android:id="@+id/native_image_cover"
                 android:contentDescription="@null"
                 android:scaleType="fitXY"
                 app:layout_aspectRatio="178%"
                 app:layout_widthPercent="100%" />
 
             <RelativeLayout
-                android:id="@+id/fb_media_cover"
+                android:id="@+id/native_media_cover"
                 android:contentDescription="@null"
                 android:visibility="gone"
                 app:layout_aspectRatio="178%"
                 app:layout_widthPercent="100%" />
 
             <RelativeLayout
-                android:id="@+id/fb_ad_choices_container"
+                android:id="@+id/native_ad_choices_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -43,7 +43,7 @@
         </android.support.percent.PercentRelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/fb_header_info"
+            android:id="@+id/native_header_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="4dp"
@@ -52,11 +52,11 @@
             android:paddingRight="6dp"
             android:background="@drawable/ad_header_gradient_bg"
             android:layout_marginTop="8dp"
-            android:layout_alignBottom="@+id/fb_cover_info"
+            android:layout_alignBottom="@+id/native_cover_info"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/fb_icon"
+                android:id="@+id/native_icon"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_alignParentLeft="true"
@@ -68,8 +68,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="16dp"
-                android:layout_toRightOf="@id/fb_icon"
-                android:layout_toLeftOf="@+id/fb_action_btn"
+                android:layout_toRightOf="@id/native_icon"
+                android:layout_toLeftOf="@+id/native_action_btn"
                 android:gravity="center_vertical"
                 android:orientation="vertical">
 
@@ -79,7 +79,7 @@
                     android:gravity="left">
 
                     <TextView
-                        android:id="@+id/fb_sponsored_label"
+                        android:id="@+id/native_sponsored_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
@@ -97,10 +97,10 @@
                         android:textSize="8sp" />
 
                     <TextView
-                        android:id="@+id/fb_title"
+                        android:id="@+id/native_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toLeftOf="@+id/fb_sponsored_label"
+                        android:layout_toLeftOf="@+id/native_sponsored_label"
                         android:ellipsize="marquee"
                         android:gravity="left|top"
                         android:maxLines="1"
@@ -111,7 +111,7 @@
                 </RelativeLayout>
 
                 <TextView
-                    android:id="@+id/fb_sub_title"
+                    android:id="@+id/native_sub_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ellipsize="marquee"
@@ -124,7 +124,7 @@
             </LinearLayout>
 
             <android.support.v7.widget.AppCompatButton
-                android:id="@+id/fb_action_btn"
+                android:id="@+id/native_action_btn"
                 style="@style/AdButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
