--- a/app/src/main/res/layout/fb_native.xml
+++ b/app/src/main/res/layout/fb_native.xml
@@ -62,7 +62,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/fb_icon"
+                android:layout_below="@+id/native_icon"
                 android:layout_marginTop="10dp"
                 android:layout_centerHorizontal="true"
                 android:gravity="center_vertical"
@@ -84,7 +84,7 @@
                         android:paddingRight="4dp"
                         android:paddingTop="2dp"
                         android:text="AD"
-                        android:layout_toRightOf="@+id/fb_title"
+                        android:layout_toRightOf="@+id/native_title"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="8sp" />
 
