--- a/adsdk/src/main/res/layout/native_card_medium.xml
+++ b/adsdk/src/main/res/layout/native_card_medium.xml
@@ -99,7 +99,7 @@
                         android:layout_toLeftOf="@+id/native_sponsored_label"
                         android:ellipsize="marquee"
                         android:gravity="left|top"
-                        android:maxLines="1"
+                        android:singleLine="true"
                         android:text="Charge Master"
                         android:textColor="@color/primaryTextColor"
                         android:textSize="18sp" />
@@ -112,8 +112,8 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="marquee"
                     android:gravity="left|top"
-                    android:maxLines="1"
-                    android:text="One Clean is a light, fast and smart phone cleaner for your Android phones or tablet."
+                    android:singleLine="true"
+                    android:text="sub title"
                     android:textColor="@color/secondaryTextColor"
                     android:textSize="12sp" />
 
@@ -123,7 +123,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="marquee"
                     android:gravity="left|top"
-                    android:maxLines="1"
+                    android:singleLine="true"
                     android:textColor="@android:color/darker_gray"
                     android:textSize="12sp"
                     android:visibility="gone" />
@@ -142,7 +142,7 @@
             android:ellipsize="marquee"
             android:gravity="left|center_vertical"
             android:maxLines="3"
-            android:text="One Clean is a light, fast and smart phone cleaner for your Android phones or tablet."
+            android:text="detail"
             android:textColor="@color/secondaryTextColor"
             android:textSize="15sp" />
 
