--- a/app/src/main/res/layout/fb_native.xml
+++ b/app/src/main/res/layout/fb_native.xml
@@ -95,7 +95,7 @@
                         android:layout_centerHorizontal="true"
                         android:ellipsize="marquee"
                         android:gravity="left|top"
-                        android:maxLines="1"
+                        android:singleLine="true"
                         android:text="Charge Master"
                         android:textColor="@color/primaryTextColor"
                         android:textSize="18sp" />
@@ -108,7 +108,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="marquee"
                     android:gravity="left|top"
-                    android:maxLines="1"
+                    android:singleLine="true"
                     android:text="One Clean is a light, fast and smart phone cleaner for your Android phones or tablet."
                     android:textColor="@color/secondaryTextColor"
                     android:textSize="12sp"
@@ -120,7 +120,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="marquee"
                     android:gravity="left|top"
-                    android:maxLines="1"
+                    android:singleLine="true"
                     android:textColor="@android:color/darker_gray"
                     android:textSize="12sp"
                     android:visibility="visible" />
@@ -146,7 +146,7 @@
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/fb_action_btn"
-            style="@style/AdButtonStyle_Large"
+            style="@style/AdButtonLargeStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
