--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,70 +32,24 @@
                 android:onClick="onClick"
                 android:text="复合测试" />
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/fb_native_custom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="FB自定义NATIVE" />
-
-            <Button
-                android:id="@+id/fb_native_preload"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="FB预制NATIVE" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/adx_native_custom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="ADX自定义NATIVE" />
-
-            <Button
-                android:id="@+id/adx_native_preload"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="ADX预制NATIVE" />
-        </LinearLayout>
         <Button
-            android:id="@+id/adx_fb_native_common1"
+            android:id="@+id/native_common1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClick"
-            android:text="ADX_FB共用布局1" />
+            android:text="NATIVE通用布局1" />
         <Button
-            android:id="@+id/adx_fb_native_common2"
+            android:id="@+id/native_common2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClick"
-            android:text="ADX_FB共用布局2" />
+            android:text="NATIVE通用布局2" />
         <Button
-            android:id="@+id/adx_fb_native_common3"
+            android:id="@+id/native_common3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClick"
-            android:text="ADX_FB共用布局3" />
+            android:text="NATIVE通用布局3" />
         <Button
             android:id="@+id/webmob_interstitial"
             android:layout_width="match_parent"
@@ -108,5 +62,11 @@
             android:layout_height="wrap_content"
             android:onClick="onClick"
             android:text="WEMOB原生测试" />
+        <Button
+            android:id="@+id/reward_video"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="激励视频" />
     </LinearLayout>
 </ScrollView>
