--- a/app/src/main/res/layout/fb_native.xml
+++ b/app/src/main/res/layout/fb_native.xml
@@ -62,7 +62,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/native_icon"
+                android:layout_below="@+id/fb_icon"
                 android:layout_marginTop="10dp"
                 android:layout_centerHorizontal="true"
                 android:gravity="center_vertical"
@@ -89,7 +89,7 @@
                         android:textSize="8sp" />
 
                     <TextView
-                        android:id="@+id/fb_title"
+                        android:id="@+id/native_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
