--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,54 +14,70 @@
             android:layout_marginTop="6dp"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/interstitial"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="插屏测试" />
-
-            <Button
-                android:id="@+id/complex"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="复合测试" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/gt_outer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="应用外测试" />
+
+        <Button
+            android:id="@+id/interstitial"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="插屏测试" />
+
+        <Button
+            android:id="@+id/complex"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="复合测试" />
+
         <Button
             android:id="@+id/native_common1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClick"
             android:text="NATIVE通用布局1" />
+
         <Button
             android:id="@+id/native_common2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClick"
             android:text="NATIVE通用布局2" />
+
         <Button
             android:id="@+id/native_common3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClick"
             android:text="NATIVE通用布局3" />
+
         <Button
             android:id="@+id/webmob_interstitial"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClick"
             android:text="WEMOB插屏测试" />
+
         <Button
             android:id="@+id/webmob_native"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClick"
             android:text="WEMOB原生测试" />
+
         <Button
             android:id="@+id/reward_video"
             android:layout_width="match_parent"
