--- a/app/src/main/res/layout/ad_common_native_card_medium.xml
+++ b/app/src/main/res/layout/ad_common_native_card_medium.xml
@@ -38,6 +38,7 @@
                         android:id="@+id/common_media_cover"
                         android:contentDescription="@null"
                         android:visibility="gone"
+                        android:gravity="center"
                         app:layout_aspectRatio="190%"
                         app:layout_widthPercent="100%" />
 
@@ -150,4 +151,14 @@
             android:textSize="@dimen/sp_20"
             android:textStyle="bold" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/native_adprivacy"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="right"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="4dp"
+        android:padding="10dp"
+        android:visibility="gone" />
 </FrameLayout>
