1. 优化原生插屏布局

--- a/adsdk/src/main/res/layout/native_card_full.xml
+++ b/adsdk/src/main/res/layout/native_card_full.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
+        android:paddingBottom="16dp"
         android:orientation="vertical">
 
         <android.support.percent.PercentRelativeLayout
@@ -156,7 +157,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_gravity="center"
-            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="15dp"
