--- a/adsdk/src/main/res/values/ad_styles.xml
+++ b/adsdk/src/main/res/values/ad_styles.xml
@@ -31,7 +31,7 @@
         <item name="android:layout_height">36dp</item>
         <item name="android:textSize">13sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:background">@drawable/ad_button_bg</item>
+        <item name="android:background">@drawable/ad_button_green_bg</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
 </resources>
